fix h-screen overlap

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,11 @@
   font-family: 'Space Mono', sans-serif;
 
 }
+
+section{
+  max-width: 80%;
+}
+
+.text-bg-dark{
+  background-color: rgb(30 41 59);
+}
